expected/main/lc/data-illegal-kind-annotations2.err
ERROR: "/Users/user/Desktop/working/mil-test/actual/main/lc/data-illegal-kind-annotations2.llc", line 3
  data V f a = C ((f :: boo -> *) a) | D (V f a) a | E ((a :: *) :: nat)
                        ^
Unknown kind "boo"

ERROR: Aborting after previously reported error

